src/objects/Media_Outlet__c.object
<CustomObject>
    <description>PMC</description>
    <fields>
        <fullName>National__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <inlineHelpText>Notes</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Marketing Source</description>
        <inlineHelpText>Type of Marketing Source</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended an event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News story (TV, radio, newspaper)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by someone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Ad Campaign / Event Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Dictionary_Values</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Dictionary Values</label>
    </listViews>
    <nameField>
        <label>Ad Campaign / Event Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Campaigns / Event Types</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Type</fullName>
        <active>true</active>
        <description>Type</description>
        <errorConditionFormula>ISNULL(TEXT(Type__c ))</errorConditionFormula>
        <errorMessage>Type is required</errorMessage>
    </validationRules>
</CustomObject>